; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_util.c_svn_client__pathrev_create_with_relpath.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_util.c_svn_client__pathrev_create_with_relpath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_client__pathrev_create_with_relpath(i8* %0, i8* %1, i32 %2, i8* %3, i32* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32* %4, i32** %10, align 8
  %11 = load i8*, i8** %9, align 8
  %12 = call i32 @svn_relpath_is_canonical(i8* %11)
  %13 = call i32 @SVN_ERR_ASSERT_NO_RETURN(i32 %12)
  %14 = load i8*, i8** %6, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = call i32 @svn_path_url_add_component2(i8* %17, i8* %18, i32* %19)
  %21 = load i32*, i32** %10, align 8
  %22 = call i32* @svn_client__pathrev_create(i8* %14, i8* %15, i32 %16, i32 %20, i32* %21)
  ret i32* %22
}

declare dso_local i32 @SVN_ERR_ASSERT_NO_RETURN(i32) #1

declare dso_local i32 @svn_relpath_is_canonical(i8*) #1

declare dso_local i32* @svn_client__pathrev_create(i8*, i8*, i32, i32, i32*) #1

declare dso_local i32 @svn_path_url_add_component2(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
